--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
   "license": "MIT",
   "dependencies": {
     "commander": "^2.17.1",
+    "dotenv": "^6.0.0",
     "jest": "^23.5.0",
     "pm2": "^3.0.4"
   },
   "devDependencies": {
-    "dotenv": "^6.0.0"
   }
 }
