--- a/_env/package.json
+++ b/_env/package.json
@@ -5,6 +5,7 @@
   "main": "docker-compose.yml",
   "scripts": {
     "start":"sh ./_scripts/start.sh",
+    "start:protocol": "docker-compose up -d dc_protocol",
     "logs_rpc":"docker logs -f env_dc_protocol_1",
     "logs_bankroller":"docker logs -f env_dc_bankroller_1",
     
