--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
   "author": "Ilya Shu <ilya.dev@dao.casino>",
   "license": "MIT",
   "dependencies": {
+    "blessed": "^0.1.81",
     "chalk": "^2.4.1",
     "commander": "^2.17.1",
     "dotenv": "^6.0.0",
     "jest": "^23.5.0",
     "log-symbols": "^2.2.0",
     "ora": "^3.0.0",
+    "pm2": "^3.0.4",
+    "puppeteer": "^1.7.0",
+    "simple-git": "^1.96.0",
     "truffle": "^4.1.14",
     "web3": "^1.0.0-beta.35"
   }
