--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "env for development DCLabs protocol",
   "main": "./src/index.js",
   "scripts": {
+    "postinstall": "sh scripts/postinstall.sh",
     "preinstall": "sh scripts/preinstall.sh",
     "start": "cd ./_env && docker-compose up -d dc_protocol",
     "migrate": "truffle migrate --reset"
