--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dc-scripts",
   "version": "0.0.1",
   "description": "env for development DCLabs protocol",
-  "main": "./src/index.js",
+  "main": "./_env/index.js",
   "scripts": {
     "postinstall": "sh scripts/postinstall.sh",
     "preinstall": "sh scripts/preinstall.sh",
