fix setup script

--- a/_env/docker-compose.yml
+++ b/_env/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     image:
       daocasino/bankroller
     volumes:
-      - ${TARGET_PATH}:/protocol
+      - ./protocol:/protocol
       - ./bankroller/dapps/:/bankroller/data_sdk/dapps/
     entrypoint: 
       ["sh", "./run_sdk_env.sh"]
