--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "author": "Ilya Shu <ilya.dev@dao.casino>",
   "license": "MIT",
   "dependencies": {
+    "async": "^2.6.1",
+    "async-on-exit": "^0.1.0",
     "blessed": "^0.1.81",
     "chalk": "^2.4.1",
     "commander": "^2.17.1",
