--- a/_env/docker-compose.yml
+++ b/_env/docker-compose.yml
@@ -7,6 +7,7 @@ networks:
 services:
   # ethereum test rpc network based on ganache-cli 
   dc_protocol:
+    container_name: dc_protocol
     labels:
       - "TestRPC on port 1406"
       - "truffle ganache-cli"
@@ -20,6 +21,7 @@ services:
        - dc_network
 
   dc_signal:
+    container_name: dc_signal
     labels:
       - "WebRTC signal"
       - "rendezvous"
@@ -35,6 +37,7 @@ services:
   # Bankroller node / casino backend
   # service watch dapp logic and reload node if his change 
   dc_bankroller:
+    container_name: dc_bankroller
     labels:
       - "dapp casino backend"
     depends_on:
