--- a/_env/package.json
+++ b/_env/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start":"sh ./_scripts/start.sh",
     "start:protocol": "docker-compose up -d dc_protocol",
-    "logs:rpc":"docker logs -f dc_protocol",
-    "logs:bankroller":"docker logs -f dc_bankroller",
+    "logs:dc_protocol":"docker logs -f dc_protocol",
+    "logs:dc_bankroller":"docker logs -f dc_bankroller",
     
     "go_bankroller":"docker exec -i -t env_dc_bankroller_1 /bin/bash",
 
