--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "_postinstall": "sh scripts/postinstall.sh",
     "_preinstall": "sh scripts/preinstall.sh",
+    "uuid": "node ./_env/_scripts/uuid.js",
     "start": "cd ./_env && docker-compose up -d dc_protocol",
     "migrate:local": "truffle migrate --network local",
     "migrate:ropsten": "truffle migrate --network ropsten"
@@ -34,6 +35,7 @@
     "ncp": "^2.0.0",
     "pm2": "^3.0.4",
     "truffle": "^5.0.0-beta.0",
-    "truffle-hdwallet-provider": "^1.0.0-web3one.0"
+    "truffle-hdwallet-provider": "^1.0.0-web3one.0",
+    "node-machine-id": "^1.1.10"
   }
 }
